<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FenEditer</class>
 <widget class="QDialog" name="FenEditer">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>311</width>
    <height>121</height>
   </rect>
  </property>
  <property name="sizePolicy">
   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle">
   <string>EasyRealm - Edition d'un realmlist</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0" colspan="3">
    <layout class="QFormLayout" name="formLayout">
     <item row="0" column="0">
      <widget class="QLabel" name="label">
       <property name="text">
        <string>Titre</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>Adtresse Realmlist</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="QLabel" name="label_3">
       <property name="text">
        <string>Adresse Patchlist</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="ui_titre">
       <property name="enabled">
        <bool>false</bool>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLineEdit" name="ui_realmlist"/>
     </item>
     <item row="2" column="1">
      <widget class="QLineEdit" name="ui_patchlist">
       <property name="enabled">
        <bool>true</bool>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="1" column="0">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>128</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="1">
    <widget class="QPushButton" name="ui_btnEditer">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="text">
      <string>Editer</string>
     </property>
     <property name="icon">
      <iconset resource="EasyRealmRessources.qrc">
       <normaloff>:/FenPrincipale/ressources/ok_edit.png</normaloff>:/FenPrincipale/ressources/ok_edit.png</iconset>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QPushButton" name="ui_btnAnnuler">
     <property name="text">
      <string>Annuler</string>
     </property>
     <property name="icon">
      <iconset resource="EasyRealmRessources.qrc">
       <normaloff>:/FenPrincipale/ressources/cancel.png</normaloff>:/FenPrincipale/ressources/cancel.png</iconset>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources>
  <include location="EasyRealmRessources.qrc"/>
 </resources>
 <connections/>
</ui>
